# tui-candlestick-chart

./: Cargo.toml
examples/: binance.rs  simple.rs
src/: candle.rs  candlestick_chart.rs  lib.rs  symbols.rs  x_axis.rs
