[package]
name = "tui-candlestick-chart"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"]}
itertools = { version= "0.12", default-features = false, features = ["use_alloc"] }
ordered-float = { version = "4.0", default-features = false }
ratatui = { version = "0.29.0", default-features = false }
tracing = { version = "0.1", default-features = false }
unicode-segmentation = "1.10.1"

[dev-dependencies]
actix-rt = "2.9.0"
awc = { version = "3.4.0", features = ["rustls-0_22-webpki-roots"] }
chrono-tz = "0.6"
crossterm = "0.27"
futures = "0.3.30"
indoc = "2"
ratatui = "0.29.0"
serde_json = "1.0.142"
